[gd_scene load_steps=2 format=3 uid="uid://ci3tib2qnqg2x"]

[ext_resource type="Script" path="res://scenes/components/ranged_weapon_component/ranged_weapon_component.gd" id="1_l1w65"]

[node name="RangedWeaponComponent" type="Node2D"]
script = ExtResource("1_l1w65")

[node name="FireRateTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
